# kuco-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  devbox.json
crates/kuco/: Cargo.toml
crates/kuco-backend/: Cargo.toml
crates/kuco-backend/src/: main.rs
crates/kuco-cache/: Cargo.toml
crates/kuco-cache/src/: lib.rs
crates/kuco-k8s-backend/: Cargo.toml
crates/kuco-k8s-backend/src/: containers.rs  context.rs  error.rs  lib.rs  logs.rs  namespaces.rs  pods.rs
crates/kuco-sqlite-backend/: Cargo.toml
crates/kuco-sqlite-backend/src/: cache.rs  interface.rs  lib.rs  persistence.rs  traits.rs
crates/kuco/src/: app.rs  constants.rs  data.rs  draw.rs  event.rs  kube_data.rs  lib.rs  main.rs  namespace_list.rs  namespace_view.rs  sync.rs  tracing.rs  ui.rs  view.rs
scripts/: dev_tools.sh  local-devel.sh  test_ns.sh  test_pods.yaml
