[workspace]
members = ["crates/*"]

resolver = "2"

[workspace.package]
version = "0.1.0"
description = "Kubernetes Console TUI"
authors = ["Alexei Ozerova <aozerov.dev@gmail.com>"]
license = "MIT"
edition = "2024"

[workspace.dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
