[package]
name = "kuco-backend"
edition = "2024"
description = "backend library for kuco"

version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
tokio = { workspace = true }

serde = { version = "1", features = ["derive"] }
kube = { version = "0.99.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
