[package]
name = "kuco-sqlite-backend"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
color-eyre = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

sqlx = { version = "0.7", features = ["sqlite", "regexp", "macros", "runtime-tokio-native-tls", "json", "macros" ] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
async-trait = "0.1"

[features]
default = []
serde_support = ["serde", "serde_json"]
