[package]
name = "kuco"
edition = "2024"
description = "kuco - kubernetes console tui"

version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
kuco-k8s-backend = { path = "../kuco-k8s-backend/" }

crossterm = { workspace = true }
futures = { workspace = true }
ratatui = { workspace = true }
tokio = { workspace = true }
color-eyre = { workspace = true }
rayon = "1.10.0"
