[package]
name = "kuco"
edition = "2024"
description = "kuco - kubernetes console tui"

version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
kuco-k8s-backend = { path = "../kuco-k8s-backend/" }
kuco-cache = { path = "../kuco-cache/" }

crossterm = { workspace = true }
futures = { workspace = true }
ratatui = { workspace = true }
tokio = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
rayon = "1.10.0"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
directories = "6.0.0"
lazy_static = "1.5.0"
tracing-appender = "0.2.3"
nucleo-matcher = "0.3.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
